--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>.::Carlos Suárez::.</title>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <header>
-    <img src="/images/logo-new-horizons.png" alt="Rimac" title="Carlos Suárez" />
+    <img src="images/logo-new-horizons.png" alt="Rimac" title="Carlos Suárez" />
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
@@ -31,7 +31,7 @@
       </h3>
     </section>
     <section id="seiko" class="impar">
-      <img class="round" src="/images/logo-seiko.jpg" alt="Seiko Holdings Corporation" title="Seiko Holdings Corporation" />
+      <img class="round" src="images/logo-seiko.jpg" alt="Seiko Holdings Corporation" title="Seiko Holdings Corporation" />
       <br />
       <h3>Seiko Holdings Corporation</h3>
       <p>Seiko Holdings Corporation es una marca de relojería japonesa, fundada en 1881 por Kintaro Hattori. Seiko es
@@ -41,18 +41,18 @@
       <h3>Marcas</h3>
       <ul class="grid">
         <li>
-          <img class="round" src="/images/grand-seiko-watch.jpg" alt="Grand Seiko" title="Grand Seiko" />
+          <img class="round" src="images/grand-seiko-watch.jpg" alt="Grand Seiko" title="Grand Seiko" />
           <h4>Grand Seiko</h4>
           <p>Hecho a mano para quienes valoran la perfección, ya sea clásico, de vestir o deportivo. Grand Seiko ofrece
             los más altos estándares de precisión, durabilidad y legibilidad.</p>
         </li>
         <li>
-          <img class="round" src="/images/seiko-prospex-watch.jpg" alt="Seiko Prospex" title="Seiko Prospex" />
+          <img class="round" src="images/seiko-prospex-watch.jpg" alt="Seiko Prospex" title="Seiko Prospex" />
           <h4>Seiko Prospex</h4>
           <p>Para amantes del deporte y aventura Ya sea por cielo, mar o tierra.</p>
         </li>
         <li>
-          <img class="round" src="/images/seiko-5-watch.jpg" alt="Seiko 5" title="Seiko 5" />
+          <img class="round" src="images/seiko-5-watch.jpg" alt="Seiko 5" title="Seiko 5" />
           <h4>Seiko 5</h4>
           <p>Movimiento automático, resistencia al agua de 3 bares, pantalla con día y la fecha, corona oculta detrás de
             la posición cuatro y una caja y brazalete de gran resistencia.</p>
@@ -61,7 +61,7 @@
       <hr />
     </section>
     <section id="citizen" class="par">
-      <img class="round" src="/images/logo-citizen.jpg" alt="Better starts now" title="Better starts now" />
+      <img class="round" src="images/logo-citizen.jpg" alt="Better starts now" title="Better starts now" />
       <br />
       <h3>Better starts now</h3>
       <p>Citizen Holdings Co., Ltd. es la compañía matriz del grupo corporativo japonés Citizen con base en Tokio,
@@ -70,17 +70,17 @@
       <h3>Marcas</h3>
       <ul class="grid">
         <li>
-          <img class="round" src="/images/citizen-signature-watch.jpg" alt="Signature" title="Signature" />
+          <img class="round" src="images/citizen-signature-watch.jpg" alt="Signature" title="Signature" />
           <h4>Signature</h4>
           <p>Calibres automáticos de grandes prestaciones y sistema eco drive.</p>
         </li>
         <li>
-          <img class="round" src="/images/citizen-promaster-watch.jpg" alt="Promaster" title="Promaster" />
+          <img class="round" src="images/citizen-promaster-watch.jpg" alt="Promaster" title="Promaster" />
           <h4>Promaster</h4>
           <p>Relojes con multifunciones para todo tipo de actividad AIRE-TIERRA-MAR.</p>
         </li>
         <li>
-          <img class="round" src="/images/citizen-wach.jpg" alt="Citizen" title="Citizen" />
+          <img class="round" src="images/citizen-wach.jpg" alt="Citizen" title="Citizen" />
           <h4>Citizen</h4>
           <p>Eco-Drive, puede generar energía a partir de cualquier fuente de luz (luz artificial, luz natural e
             incluso con luz tenue) para que continúe el funcionamiento de los relojes sin necesidad de sustituir la
@@ -90,7 +90,7 @@
       <hr />
     </section>
     <section id="orient" class="impar">
-      <img class="round" src="/images/logo-orient.jpg" alt="Nuestra dedicación a la precisión"
+      <img class="round" src="images/logo-orient.jpg" alt="Nuestra dedicación a la precisión"
         title="Nuestra dedicación a la precisión" />
       <br />
       <h3>Nuestra dedicación a la precisión</h3>
@@ -100,19 +100,19 @@
       <h3>Marcas</h3>
       <ul class="grid">
         <li>
-          <img class="round" src="/images/orient-star-outdoor-watch.jpg" alt="Orient Star" title="Orient Star" />
+          <img class="round" src="images/orient-star-outdoor-watch.jpg" alt="Orient Star" title="Orient Star" />
           <h4>Orient Star</h4>
           <p>Desde 1951, ORIENT STAR ha sido nuestra línea de relojes más distinguida y exquisita, en la que todos los
             modelos aportan una calidad excepcional, una artesanía magistral y una sencillez llena de elegancia.</p>
         </li>
         <li>
-          <img class="round" src="/images/orient-watch.jpg" alt="Orient" title="Orient" />
+          <img class="round" src="images/orient-watch.jpg" alt="Orient" title="Orient" />
           <h4>Orient</h4>
           <p>La combinación de la minuciosa artesanía japonesa con un diseño precioso y fiable, hacen de los relojes
             ORIENT un elegante complemento para acompañarte en los momentos más especiales.</p>
         </li>
         <li>
-          <img class="round" src="/images/orient-3-star-watch.jpg" alt="Orient Three Stars" title="Orient Three Stars" />
+          <img class="round" src="images/orient-3-star-watch.jpg" alt="Orient Three Stars" title="Orient Three Stars" />
           <h4>Orient Three Stars</h4>
           <p>Manufactura propia al alcance de todos.</p>
         </li>
@@ -180,7 +180,7 @@
     </ul>
     <div class="copy-right">
       <div class="logo">
-        <img src="./images/logo-new-horizons.png" alt="Carlos Suárez" title="Carlos Suárez" />
+        <img src=".images/logo-new-horizons.png" alt="Carlos Suárez" title="Carlos Suárez" />
       </div>
       <p class="copy-right-text">
         © New Horizons.
