--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </ul>
     <div class="copy-right">
       <div class="logo">
-        <img src=".images/logo-new-horizons.png" alt="Carlos Suárez" title="Carlos Suárez" />
+        <img src="images/logo-new-horizons.png" alt="Carlos Suárez" title="Carlos Suárez" />
       </div>
       <p class="copy-right-text">
         © New Horizons.
